--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "uuid": "^10.0.0",
     "vite-plugin-svgr": "^4.2.0"
   },
