--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-todo",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Rambo-react.github.io/react-todos",
   "type": "module",
   "scripts": {
     "start": "vite",
